# TerminalEditor-CC

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: main.yml
nodeA/: .env  .gitignore  package-lock.json  package.json
nodeA/public/: index.html
nodeA/src/: App.js  EditorComp.js  Terminal.js  app.css  fileExplorer.js  index.css  index.js
nodeA/src-tauri/: Cargo.toml  cert.pem  hg.toml  local_key  tauri.conf.json
nodeA/src-tauri/src/: main.rs
nodeA/src-tauri/src/tty/: mod.rs
public/: global-style.css
src/: A2.jsx  App.js  App.jsx  Chat.jsx  EditorComp.jsx  FileExplorer2.jsx  app.css  index.js  main.jsx  styles.css  styles.jsx  t3.jsx
src-tauri/: .gitignore  Cargo.toml  config.toml  gh.js  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: event.rs  main.rs  old.rs
src-tauri/src/commands/: commands.rs  mod.rs
src-tauri/src/config/: config.rs
src-tauri/src/network/: mod.rs  network.rs
src-tauri/src/pty/: ws_server.rs
src-tauri/src/settings/: settings.rs
src-tauri/src/tty/: unix.rs
src/old/: App2.jsx  Terminal.js  Terminal.jsx  terrmm.jsx
