[package]
name = "Node2"
version = "0.1.1"
description = "A Tauri App with P2P functionality"
authors = ["0xed24"]
license = ""
repository = ""
default-run = "Node2"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
anyhow = "1.0.58"
clap = { version = "4.1.11", features = ["derive", "env"] }
dotenv = "0.15"
futures = "0.3.27"
libp2p = { version = "0.52.3", features = [
    "identify",
    "ping",
    "tokio",
    "gossipsub",
    "macros",
    "relay",
    "kad",
    "rsa",
    "ed25519",
    "quic",
    "request-response",
    "dns",
    "memory-connection-limits",
] }
libp2p-webrtc = { version = "0.6.0-alpha", features = ["tokio", "pem"] }
log = "0.4.17"
once_cell = "1.19.0"
tokio = { version = "1.27.0", features = ["full"] }
tauri = { version = "1.5.2", features = [ "shell-all"] }
async-trait = "0.1.68"
serde_json = "1.0.82"
serde = { version = "1.0", features = ["derive"] }
futures-timer = "3.0.2"
env_logger = "0.10.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking"] }
bytes = "1.1.0"
futures-util = "0.3.8"
serde_derive = "1.0"
mt_logger = "3.0.2"
tokio-tungstenite = "0.18.0"
portable-pty = "0.8.0"
dirs = "4.0.0"
whoami = "1.2.1"
config = "0.14.0"
# fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }


[target.'cfg(unix)'.dependencies]

[features]
custom-protocol = ["tauri/custom-protocol"]
