[package]
name = "CC-node-A"
version = "0.1.1"
description = "Realtime distributed code editor"
authors = ["Edward Lampoh"]
license = ""
repository = ""
default-run = "CC-node-A"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.4", features = ["http-all", "dialog-all"] }
regex = "1.8.4"
libc = "0.2"
tokio = { version = "1.27.0", features = ["full"] }
tokio-tungstenite = "0.15"
base64 = "0.22.0"
bitflags = "2.4.1"
home = "0.5.5"
log = "0.4.17"
parking_lot = "0.12.0"
polling = "3.0.0"
regex-automata = "0.4.3"
unicode-width = "0.1"
tempfile = "3.2"
futures-util = "0.3"
vte = { version = "0.13.0", default-features = false, features = [
    "ansi",
    "serde",
] }
anyhow = "1.0"
clap = { version = "4.1.11", features = ["derive", "env"] }
env_logger = "0.10.0"
futures = "0.3.27"
futures-timer = "3.0.2"
libp2p = { version = "0.52.3", features = [
    "identify",
    "ping",
    "tokio",
    "gossipsub",
    "macros",
    "relay",
    "kad",
    "rsa",
    "ed25519",
    "quic",
    "request-response",
    "dns",
    "memory-connection-limits",
] }
libp2p-webrtc = { version = "0.6.0-alpha", features = ["tokio", "pem"] }
rand = "0.8.5"
tokio-util = { version = "0.7", features = ["full"] }
async-trait = "0.1.68"
dotenv = "0.15"
once_cell = "1.19.0"

[target.'cfg(unix)'.dependencies]
rustix-openpty = "0.1.1"
signal-hook = "0.3.10"

[features]
custom-protocol = ["tauri/custom-protocol"]
